# Email-Verifier

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  firestore.rules  vercel.json
.github/workflows/: ci.yml  codeql.yml
backend/: .env.example  pyproject.toml
backend/app/: api_keys.py  auth.py  disposable.py  extractor.py  files.py  job_store.py  jobs_persistence.py  lead_finder.py  locale.py  main.py  profiles.py  providers.py  results_storage.py  verifier.py
backend/app/lead_providers/: __init__.py  base.py  brave_search.py  hunter.py  pattern.py  website_crawl.py
backend/tests/: conftest.py  test_auth_endpoints.py  test_cors_and_preflight.py  test_dashboard.py  test_deploy_tier_capabilities.py  test_extractor.py  test_files.py  test_job_isolation.py  test_job_store.py  test_jobs_persistence.py  test_lead_finder.py  test_lead_providers.py  test_locale_providers.py  test_main_endpoints.py  test_permutator.py  test_results_storage.py  test_results_storage_multi_machine.py  test_verifier.py  test_verifier_cache.py
deploy/: README.md
deploy/azure/: Caddyfile  README.md  email-verifier.service  install.sh
deploy/fly/: Dockerfile  README.md  fly.toml
deploy/hugging-face/: Dockerfile  README.md  space-README.md  sync.sh
deploy/koyeb/: Dockerfile  README.md  koyeb.yaml
deploy/render/: Dockerfile  README.md  render.yaml
deploy/vercel-fallback/: README.md  requirements.txt  vercel.json
docs/: DEPLOYMENT.md
frontend/: .env  .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+67 files in other folders)
